cabal-version:      3.0
name:               haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             kuuuube
maintainer:         hexagonisalie@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, aeson ^>=2.1.2.1, split ^>=0.2.3.5, time ^>=1.11.1.1
    hs-source-dirs:   app
    default-language: Haskell2010
